refactor: change extension .js on .ts according to step 2

--- a/migration-to-typescript/package.json
+++ b/migration-to-typescript/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "migration-newip-to-ts",
+    "name": "migration-to-typescript",
     "version": "1.0.0",
     "description": "",
     "main": "webpack.base.config.js",
