--- a/migration-to-typescript/.eslintrc.json
+++ b/migration-to-typescript/.eslintrc.json
@@ -19,6 +19,7 @@
         "no-debugger": "off",
         "no-console": 0,
         "class-methods-use-this": "off",
-        "@typescript-eslint/rule-name": "error"
+        "@typescript-eslint/rule-name": "error",
+        "@typescript-eslint/no-explicit-any": "error"
     }
 }
