--- a/art-quiz/package.json
+++ b/art-quiz/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --env development",
     "build": "webpack",
-    "lint": "eslint ./src --fix"
+    "lint": "eslint ./src"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
