--- a/art-quiz/package.json
+++ b/art-quiz/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.1.0",
-  "description": "This is the game which you need to combine a picture and its author",
+  "description": "This is the game in which you need to combine a picture and its author",
   "private": true,
   "name": "art-quiz",
   "scripts": {
