--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-webpack-project",
+  "name": "christmas-task",
   "version": "1.0.0",
-  "description": "My webpack project",
+  "description": "Choose your favorites toys for christmas-tree",
   "main": "index.js",
   "private": true,
   "scripts": {
