--- a/async-race/package.json
+++ b/async-race/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --env development",
     "build": "webpack",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src --fix"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.6.0",
